# mdh-poisson-cuda

./: .gitignore  CMakeLists.txt  DEMO.md  README.md  md_hom_generator.hpp
include/: configuration_generator.hpp  cuda_generator.hpp  cuda_input_buffer_wrapper.hpp  cuda_input_stencil_buffer_wrapper.hpp  cuda_result_buffer_wrapper.hpp  helper.hpp  input_buffer.hpp  input_buffer_wrapper.hpp  input_scalar.hpp  input_scalar_wrapper.hpp  input_stencil_buffer.hpp  input_stencil_buffer_wrapper.hpp  input_wrapper.hpp  loop_generator.hpp  macros.hpp  md_hom.hpp  ocl_generator.hpp  result_buffer.hpp  result_buffer_wrapper.hpp  scalar_function.hpp  types.hpp
serial/: Poisoon_Sereial.cc
src/: helper.cpp  input_buffer.cpp  input_scalar.cpp  md_hom.cpp  result_buffer.cpp  scalar_function.cpp
tests/: poisson_64x64_config.json  test_poisson.cu  test_poisson_converge.cu
